<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ligaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hvs.LigaActivity" >

    <TextView
        android:id="@+id/textViewLiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Titel der Liga" />
    
    <Spinner 
        android:id="@+id/spinnerSpieltage"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
	
    <ScrollView
        android:id="@+id/scrollTableGames"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
	    <TableLayout
	        android:id="@+id/tableAlleSpiele"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:shrinkColumns="1,2" >
	
	        <TableRow android:id="@+id/ueberschrift" >
	
	            <TextView
	                android:id="@+id/spiel_datum"
	                android:text="@string/spiel_datum"
	                android:gravity="center" />
	
	            <TextView
	                android:id="@+id/heimteam"
	                android:text="@string/heimteam"
	                android:gravity="center" />
	
	            <TextView
	                android:id="@+id/gastteam"
	                android:text="@string/gastteam"
	                android:gravity="center" />
	
	            <TextView
	                android:id="@+id/ergebnis"
	                android:text="@string/ergebnis"
	                android:gravity="center" />
	        </TableRow>
	    </TableLayout>
    </ScrollView>

</LinearLayout>
