<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.hvs.AlleLigenActivity" >

    
    <TextView
        android:id="@+id/titelAlleLigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alleLigenTemp" />
    
    <ScrollView
        android:id="@+id/scrollTabelleLigen"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
	    <TableLayout
	        android:id="@+id/tabelleAlleLigen"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:shrinkColumns="1,2" >
	
	        <TableRow android:id="@+id/ueberschrift_ligen" >
	
	            <TextView
	                android:id="@+id/spiel_datum"
	                android:text="@string/liga_maennlich"
	                android:gravity="center" />
	
	            <TextView
	                android:id="@+id/heimteam"
	                android:text="@string/liga_weiblich"
	                android:gravity="center" />
	
	        </TableRow>
	    </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Geh zur Verbandsliga"
        android:onClick="callLiga" />

</LinearLayout>
